# scrapit

./: .gitignore  README.md  TODO.md  fix_issue_74.md  fix_issue_75.md  fix_issue_76.md  fix_issue_77.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: docs.html  index.html
scraper/: .env.example  colors.py  config.py  consumer.py  dashboard.py  db_utils.py  hooks.py  logger.py  main.py  metrics.py  producer.py  proxy.py  reporter.py  utils.py
scraper/cache/: __init__.py  redis_cache.py
scraper/directives/: books.yaml  github_trending.yaml  hn.yaml  producthunt.yaml  wikipedia.yaml
scraper/integrations/: llamaindex.py  mcp.py
scraper/notifications/: __init__.py
scraper/queue/: consumer.py  producer.py
scraper/scrapers/: __init__.py  bs4_scraper.py  graphql_scraper.py  paginator.py  playwright_scraper.py  rest_scraper.py  spider.py
scraper/storage/: __init__.py  csv_file.py  diff.py  json_file.py  mongo.py  parquet_file.py  postgres.py  s3.py  sqlite.py
scraper/transforms/: __init__.py
scraper/validators/: __init__.py  not_in.py
tests/: test_cache.py  test_hooks.py  test_spider.py  test_storage.py  test_transforms.py  test_validators.py
