[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapit-scraper"
version = "0.3.0"
description = "YAML-driven web scraper framework with AI agent integrations"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "João Benedet Machado", email = "joaobenedetmachado@gmail.com" },
]
keywords = [
  "web-scraping", "scraper", "yaml", "beautifulsoup", "playwright",
  "langchain", "llm", "ai-agents", "mcp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies — always installed
dependencies = [
  "requests>=2.28",
  "beautifulsoup4>=4.12",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
# pip install scrapit[mongo]
mongo = ["pymongo>=4.0"]

# pip install scrapit[rabbitmq]
rabbitmq = ["pika>=1.3"]

# pip install scrapit[playwright]
playwright = ["playwright>=1.40"]

# pip install scrapit[httpx]
httpx = ["httpx>=0.27"]

# pip install scrapit[parquet]
parquet = ["pyarrow>=15.0"]

# pip install scrapit[excel]
excel = ["openpyxl>=3.1"]

# pip install scrapit[sheets]
sheets = [
  "google-api-python-client>=2.0",
  "google-auth>=2.0",
]

# pip install scrapit[langchain]
langchain = ["langchain-core>=0.1"]

# pip install scrapit[llamaindex]
llamaindex = ["llama-index-core>=0.10"]

# pip install scrapit[anthropic]
anthropic = ["anthropic>=0.25"]

# pip install scrapit[openai]
openai = ["openai>=1.0"]

# pip install scrapit[mcp]
mcp = ["mcp>=1.0"]

# pip install scrapit[all]  — everything
all = [
  "pymongo>=4.0",
  "pika>=1.3",
  "playwright>=1.40",
  "httpx>=0.27",
  "openpyxl>=3.1",
  "google-api-python-client>=2.0",
  "google-auth>=2.0",
  "langchain-core>=0.1",
  "llama-index-core>=0.10",
  "anthropic>=0.25",
  "openai>=1.0",
  "mcp>=1.0",
]

# pip install scrapit[dev]
dev = [
  "ruff",
  "pytest",
  "pytest-asyncio",
  "hatch",
  "build",
  "twine",
]

[project.urls]
Homepage = "https://joaobenedetmachado.github.io/scrapit"
Repository = "https://github.com/joaobenedetmachado/scrapit"
Issues = "https://github.com/joaobenedetmachado/scrapit/issues"
Changelog = "https://github.com/joaobenedetmachado/scrapit/releases"

[project.scripts]
scrapit = "scraper.main:main"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]

[tool.hatch.build.targets.sdist]
include = [
  "scraper/",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = ["E501", "F401"]
